# travis_test_2

./: .travis.yml  Cargo.toml  README.md  heartbeat.q  test.sh  travis_setup.sh  travistest.sh
examples/: macros.rs  send_query.rs  send_string_query.rs  test.rs  test_uds.rs  tls.rs  tls_connect.rs  unix_domain_socket.rs
src/: compression.rs  connection.rs  deserialization.rs  error.rs  lib.rs  qtype.rs  serialization.rs
